Fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,32 @@
 .back-btn:hover {
   opacity: 0.7;
 }
+
+.form {
+  width: 396px;
+  margin: auto;
+  margin-bottom: 70px;
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+@media screen and (max-width: 500px) {
+  .form  {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .form  {
+    width: 260px;
+  }
+}
+
+.fieldset {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  border: none;
+}
